stage/services/webserver-cluster/main.tf
provider "aws" {
  region = "us-east-1"
}

terraform {
  backend "s3" {
    bucket = "ombula-terraform-state-2026-fresh-001"
    # key    = "stage/services/webserver-cluster/terraform.tfstate"
    key          = "stage/data-stores/mysql/terraform.tfstate"
    region       = "us-east-1"
    use_lockfile = true
    encrypt      = true

  }
}

data "terraform_remote_state" "db" {
  backend = "s3"

  config = {
    bucket = "ombula-terraform-state-2026-fresh-001"
    key    = "stage/data-stores/mysql/terraform.tfstate"
    # key    = "stage/services/webserver-cluster/terraform.tfstate"
    region = "us-east-1"
  }
}

data "aws_vpc" "default" {
  default = true
}

data "aws_subnets" "default" {
  filter {
    name   = "vpc-id"
    values = [data.aws_vpc.default.id]
  }
}


resource "aws_security_group" "instance" {
  name = "terraform-example-instance"

  ingress {
    from_port   = var.server_port
    to_port     = var.server_port
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "alb" {
  name = "terraform-example-alb-v2"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# ---------------------------
# Launch Template
# ---------------------------
resource "aws_launch_template" "example" {
  image_id      = "ami-0ec10929233384c7f"
  instance_type = var.instance_type

  vpc_security_group_ids = [aws_security_group.instance.id]

  # user_data = base64encode(templatefile("${path.module}/user-data.sh", {
  #   server_port = var.server_port
  #   db_address  = data.terraform_remote_state.db.outputs.address
  #   db_port     = data.terraform_remote_state.db.outputs.port
  #   })
  # )

  user_data = base64encode(<<-EOF
  #!/bin/bash
  echo "Hello, World Task 4" > index.html
  nohup busybox httpd -f -p ${var.server_port} &
  EOF
  )

  lifecycle {
    create_before_destroy = true
  }
  # depends_on = [aws_security_group.instance]
}

# ---------------------------
# Target Group
# ---------------------------
resource "aws_lb_target_group" "asg" {
  name_prefix = "asg-"
  port        = var.server_port
  protocol    = "HTTP"
  vpc_id      = data.aws_vpc.default.id

  health_check {
    path                = "/"
    protocol            = "HTTP"
    matcher             = "200"
    interval            = 15
    timeout             = 3
    healthy_threshold   = 2
    unhealthy_threshold = 2
  }
}

# ---------------------------
# Load Balancer
# ---------------------------
resource "aws_lb" "example" {
  name               = "terraform-asg-example"
  load_balancer_type = "application"
  subnets            = data.aws_subnets.default.ids
  security_groups    = [aws_security_group.alb.id]
}

# ---------------------------
# Listener
# ---------------------------
resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.example.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type = "fixed-response"

    fixed_response {
      content_type = "text/plain"
      message_body = "404 Page not found"
      status_code  = 404
    }
  }
}

# ---------------------------
# Listener Rule
# ---------------------------
resource "aws_lb_listener_rule" "asg" {
  listener_arn = aws_lb_listener.http.arn
  priority     = 100

  condition {
    path_pattern {
      values = ["/*"]
    }
  }

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.asg.arn
  }
}

# ---------------------------
# Auto Scaling Group
# ---------------------------
resource "aws_autoscaling_group" "example" {
  launch_template {
    id      = aws_launch_template.example.id
    version = "$Latest"
  }

  vpc_zone_identifier = data.aws_subnets.default.ids

  target_group_arns = [aws_lb_target_group.asg.arn]
  health_check_type = "ELB"

  min_size = 2
  max_size = 4

  tag {
    key                 = "Name"
    value               = "terraform-asg-example"
    propagate_at_launch = true
  }
}
